style: fix links not showing

--- a/src/features/WorkflowManager/styles.scss
+++ b/src/features/WorkflowManager/styles.scss
@@ -23,6 +23,12 @@
   .srd-default-link path {
     stroke: $status-teal;
   }
+
+  srd-link-layer {
+    svg:not(:root) {
+      overflow: overlay;
+    }
+  }
 }
 
 // .bmrg-b-sidenav-content {
